syntax = "proto3";
import "common.proto";

option java_multiple_files = true;
option java_package = "com.annatarhe.athena.proto.cells";
option java_outer_classname = "CellsProto";

package proto;

service Cells {
  rpc GetList(PaginationRequest) returns (CellsReply) {}
	rpc Add(CellItem) returns (CellItemReply) {}
	rpc Remove(CellItem) returns (CommonBoolReply) {}
	rpc Destroy(CellItem) returns (CommonBoolReply) {}
}

message CellItem {
  int32 id = 1;
	string img = 2;
	string text = 3;
	string content = 13;
	int32 permission = 4;
	int32 likes = 13;
	int32 cate = 5;
  string fromID = 6;
	string fromURL = 7;
	string content = 12;
	string md5 = 10001;
	int64 createdAt = 8;
	int64 updatedAt = 9;
	int64 createdBy = 10;
	repeated string tags = 11;
}

message CellItemReply {
	CellItem cell = 1;
}

message CellsReply {
    repeated CellItem cells = 2; 
}